--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "guzzlehttp/guzzle": "^7.10",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "s-ichikawa/laravel-sendgrid-driver": "^4.0",
         "sendgrid/sendgrid": "^8.1"
     },
     "require-dev": {
